Regression: Crash on opening sculpting template #104353

Closed
opened 2023-02-05 00:56:38 +01:00 by ThinkingPolygons · 10 comments

System Information
Operating system: windows 10

Blender Version
Broken: blender-3.5.0-alpha+master.06305e5ca800-windows.amd64-release
Caused by 19b63b932d

Short description of error
Not much to say here, just open blender and go to File/New/Sculpting, and blender will close

**System Information** Operating system: windows 10 **Blender Version** Broken: blender-3.5.0-alpha+master.06305e5ca800-windows.amd64-release Caused by 19b63b932d **Short description of error** Not much to say here, just open blender and go to File/New/Sculpting, and blender will close

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons
Contributor

Added subscriber: @persun

Added subscriber: @persun
Contributor

I can confirm this.

blender.crash.txt

Looks like this is related to this commit 19b63b932d

I can confirm this. [blender.crash.txt](https://archive.blender.org/developer/F14246133/blender.crash.txt) Looks like this is related to this commit 19b63b932d

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from File/New/Sculpting = Crash to Regression: Crash on opening sculpting template 2023-02-06 11:57:36 +01:00
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Right @persun :)
Bisect points to - 19b63b932d
@mano-wii ^

Right @persun :) Bisect points to - 19b63b932d @mano-wii ^

This issue was referenced by 7beb487e9a

This issue was referenced by 7beb487e9ad1908c8a67ae7caf46e462c2ac611a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2023-02-06 13:20:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104353
No description provided.