Fix T104353: Crash on opening sculpting template

`t->region` was `NULL`.

It can happen depending on the context.

Caused by rB19b63b932d2b.